# Comfydex

./: .gitignore  .mcp.json  README.md  pyproject.toml
.codex-plugin/: plugin.json
custom_nodes/comfydex_live_bridge/: __init__.py  backend.py  runtime.py
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: assert-build-labels.mjs
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/release/: 1.0-release-checklist.md  1.2-release-checklist.md  (+10 more)
scripts/: install_live_bridge.ps1  install_windows.ps1  live_bridge.ps1  smoke_check.py  validate_plugin.py  validate_release_package.py  verify_live_bridge.ps1
tests/: test_analyzer.py  test_assets.py  test_batches.py  test_builder.py  test_capabilities.py  test_comfy_client.py  test_config.py  test_conversion.py  test_custom_node_scaffold.py  test_custom_nodes.py  test_desktop_bridge.py  test_diagnostics.py  test_docs_examples.py  test_generation.py  test_live_bridge_backend.py  test_live_bridge_frontend.py  test_live_bridge_package.py  test_live_bridge_safety.py  test_live_bridge_scripts.py  test_live_bridge_status.py  test_live_bridge_user_guidance.py  test_live_bridge_verify.py  test_node_contracts.py  test_node_docs.py  test_node_semantics.py  test_outputs.py  test_patching.py  test_paths.py  test_plugin_validation.py  test_presets.py  test_project_core.py  test_readiness.py  test_recipes.py  test_repairs.py  test_reports.py  test_runs.py  test_server_tools.py  test_templates.py  test_ui_graphs.py  test_ui_workflows.py  (+5 more)
(+113 files in other folders)
