[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfydex-mcp"
version = "1.1.0"
description = "Python MCP server for controlling ComfyUI from Codex."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "mcp>=1.9.0", "websockets>=12"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
